src/objects/Catalog_Template__c.object
<CustomObject>
    <fields>
        <fullName>Category_Text_Color__c</fullName>
        <defaultValue>&quot;#EEEEEE&quot;</defaultValue>
        <label>Category Text Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Left_Text_Color__c</fullName>
        <defaultValue>&quot;#EEEEEE&quot;</defaultValue>
        <label>Header Left Text Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Right_Text_Color__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <label>Header Right Text Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtitle_Text_Color__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <label>Subtitle Text Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtitle_Text_Size__c</fullName>
        <label>Subtitle Text Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>18px</fullName>
                </value>
                <value>
                    <fullName>24px</fullName>
                </value>
                <value>
                    <fullName>36px</fullName>
                    <default>true</default>
                    <label>36px</label>
                </value>
                <value>
                    <fullName>48px</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtitle_Text__c</fullName>
        <defaultValue>&quot;WELCOME TO OUR CATALOG!&quot;</defaultValue>
        <label>Subtitle Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Text_Color__c</fullName>
        <defaultValue>&quot;#FFF6C8&quot;</defaultValue>
        <label>Title Text Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Text_Size__c</fullName>
        <label>Title Text Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>40px</fullName>
                </value>
                <value>
                    <fullName>48px</fullName>
                </value>
                <value>
                    <fullName>56px</fullName>
                </value>
                <value>
                    <fullName>64px</fullName>
                    <default>true</default>
                    <label>64px</label>
                </value>
                <value>
                    <fullName>72px</fullName>
                </value>
                <value>
                    <fullName>80px</fullName>
                </value>
                <value>
                    <fullName>84px</fullName>
                </value>
                <value>
                    <fullName>88px</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Text__c</fullName>
        <defaultValue>&quot;FORCE.COM LABS&quot;</defaultValue>
        <label>Title Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Catalog Template</label>
    <nameField>
        <label>Catalog Template  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalog Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>